# CareerCompass

./: .gitignore  vercel.json
_prisma/_types/: client.py  schema.prisma
api/: Pipfile  db.py  main.py  package-lock.json  pyproject.toml  requirements.txt
api/prisma/: schema.prisma
api/prisma/types/: actions.py  bases.py  schema.prisma
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/@types/: Choice.tsx  Question.tsx  Result.tsx
frontend/src/components/: Button.tsx  Choice.tsx  CircularProgress.tsx  NavBar.tsx  Progress.tsx  Spinner.tsx
frontend/src/datasets/: questions.json
frontend/src/lib/: api.ts  cn.ts  useFetch.ts  useMutation.ts  usePolling.ts  useStream.ts  useWindowSize.ts
frontend/src/pages/: About.tsx  First.tsx  NotFound.tsx  Question.tsx  Result.tsx
frontend/src/utils/: cn.ts  round.ts
prisma/types/: client.py  metadata.py  models.py  types.py
server/: main.py  pyproject.toml
