[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Sairam M <sairam.m.2005.65@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
fastapi = {extras = ["all"], version = "^0.115.3"}
openai = "^1.52.2"
google-generativeai = "^0.8.3"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"

[tool.prisma]
binary_cache_dir = "F:/Python projects/CareerCompass/_prisma/_cache/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
